# pocket-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run.sh  setup-termux.sh  uninstall.sh
assets/fonts/: README.txt
assets/scenes/: default.scene
assets/shaders/: line.frag  line.vert  sprite.frag  sprite.vert
assets/sprites/: README.txt
docs/: ARCHITECTURE.md  EDITOR_GUIDE.md  RENDER_DEPLOY.md  TERMUX_GUIDE.md
editor/: CMakeLists.txt
editor/include/editor/: editor.h  panels.h  theme.h
editor/src/: editor.cpp  main.cpp
editor/src/dock/: dockspace.cpp
editor/src/panels/: console_panel.cpp  game_panel.cpp  hierarchy_panel.cpp  inspector_panel.cpp  project_panel.cpp  scene_panel.cpp  stats_overlay.cpp  toolbar.cpp
editor/src/theme/: theme.cpp
engine/: CMakeLists.txt
engine/include/pocket/asset/: asset_manager.h
engine/include/pocket/audio/: audio.h
engine/include/pocket/core/: input.h  log.h  memory.h  time.h  types.h  window.h
engine/include/pocket/db/: database.h
engine/include/pocket/ecs/: ecs.h
engine/include/pocket/math/: math.h
engine/include/pocket/net/: cloud_config.h
engine/include/pocket/physics/: physics2d.h
engine/include/pocket/render/: camera.h  renderer.h  shader.h  sprite_batch.h  texture.h
engine/include/pocket/script/: script.h
engine/include/pocket/thread/: thread_pool.h
engine/src/asset/: asset_manager.cpp
engine/src/audio/: audio.cpp
engine/src/core/: input.cpp  time.cpp  window.cpp
engine/src/db/: database.cpp
engine/src/ecs/: ecs.cpp
engine/src/net/: cloud_config.cpp
engine/src/physics/: physics2d.cpp
engine/src/render/: camera.cpp  renderer.cpp  shader.cpp  sprite_batch.cpp  texture.cpp
engine/src/script/: script.cpp
engine/src/thread/: thread_pool.cpp
scripts/: example_player.lua
server/: .env.example  .gitignore  README.md  package-lock.json  package.json  render.yaml
server/src/: db.js  index.js
server/src/middleware/: auth.js  error.js
server/src/routes/: assets.js  auth.js  projects.js  sync.js
